# newsfeed

./: AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/newsfeed/: __init__.py  app.py  app.tcss  cache.py  cli.py  config.py  display.py  feeds.py  fetcher.py  globe.py  theme.py  ticker.py  utils.py
tests/: conftest.py  test_app.py  test_cache.py  test_cli.py  test_config.py  test_display.py  test_feeds.py  test_fetcher.py  test_globe.py  test_ticker.py  test_utils.py
